Mon Dec  3 23:31:43 2001  Owen Taylor  <otaylor@redhat.com>

	* moduleinfo.py: Added a whole bunch more GNOME-2.0 modules.

2001-11-30  James Henstridge  <james@daa.com.au>

	* jamesh.jhbuildrc: add --enable-maintainer-mode for packages whose
	autogen scripts don't automatically.

	* moduleinfo.py: fix up dependencies a bit.

2001-11-19  James Henstridge  <james@daa.com.au>

	* module.py (BuildScript.__addpath): prepend the new path element,
	rather than appending it.

2001-10-26  James Henstridge  <james@daa.com.au>

	* module.py (Module.cvs_update_args): add -P -d arguments to cvs
	update commands for people who don't have them hard coded in their
	~/.cvsrc file.

2001-10-25  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome1): add initial (untested) support for
	building the gnome 1.x platform.
