@@ -1,3 +1,9 @@
+2001-12-04  James Henstridge  <james@daa.com.au>
+
+	* README: update readme to reflect changed command line args.
+
+	* jhbuild.py (main): rearrange the argument parsing a bit.
+
 Mon Dec  3 23:31:43 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* moduleinfo.py: Added a whole bunch more GNOME-2.0 modules.
